tests/integration/snapshots/integration__snapshot__secrets_outside_environment.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"secret-without-env.yml\")).args([\"--persona=pedantic\"]).run()?"
---
error[secret-without-env]: secret used without an environment to gate it
  --> @@INPUT@@:10:9
   |
10 |         - uses: actions_repo/actions/docker@13c8cf37e54dd9488afe8c067575444cc58bf155
   |  _________^
11 | |         with:
12 | |           # NOT OK: Anyone with write access can exfiltrate this secret.
13 | |           password: ${{ secrets.DOCKERHUB_PASSWORD }}
   | |______________________________________________________^ this step
   |
   = note: audit confidence → High

1 finding: 0 unknown, 0 informational, 0 low, 0 medium, 1 high
