tests/integration/snapshots/integration__snapshot__unredacted_secrets.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"unredacted-secrets.yml\")).run()?"
---
warning[unredacted-secrets]: leaked secret values
  --> @@INPUT@@:15:18
   |
15 |           stuff: ${{ fromJSON(secrets.password) }}
   |                  --------------------------------- bypasses secret redaction
   |
   = note: audit confidence → High

warning[unredacted-secrets]: leaked secret values
  --> @@INPUT@@:18:23
   |
18 |           otherstuff: ${{ fromJson(secrets.otherstuff).field }}
   |                       ----------------------------------------- bypasses secret redaction
   |
   = note: audit confidence → High

2 findings: 0 unknown, 0 informational, 0 low, 2 medium, 0 high
